--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@henrique1204/cms",
   "scripts": {
+    "bootstrap": "yarn && cd root && yarn && cd ..",
     "start": "webpack serve --port 3001",
+    "start:root": "cd root && yarn start --port 9000",
     "start:standalone": "webpack serve --env standalone",
+    "start:all": "yarn start & yarn start:root",
     "build": "concurrently yarn:build:*",
     "build:webpack": "webpack --mode=production",
     "analyze": "webpack --mode=production --env analyze",
@@ -21,6 +24,7 @@
     "@babel/plugin-transform-runtime": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@babel/runtime": "^7.23.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^12.0.0",
@@ -29,6 +33,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-config-ts-react-important-stuff": "^3.0.0",
     "eslint-plugin-prettier": "^3.4.1",
     "husky": "^7.0.2",
     "identity-obj-proxy": "^3.0.0",
@@ -36,28 +41,27 @@
     "jest-cli": "^27.5.1",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
+    "ts-config-single-spa": "^3.0.0",
+    "typescript": "^4.3.5",
     "webpack": "^5.89.0",
     "webpack-cli": "^4.10.0",
     "webpack-config-single-spa-react": "^4.0.0",
-    "webpack-dev-server": "^4.0.0",
-    "webpack-merge": "^5.8.0",
-    "@babel/preset-typescript": "^7.23.3",
-    "typescript": "^4.3.5",
+    "webpack-config-single-spa-react-ts": "^4.0.0",
     "webpack-config-single-spa-ts": "^4.0.0",
-    "ts-config-single-spa": "^3.0.0",
-    "eslint-config-ts-react-important-stuff": "^3.0.0",
-    "webpack-config-single-spa-react-ts": "^4.0.0"
+    "webpack-dev-server": "^4.0.0",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "single-spa-react": "^4.3.1",
     "@types/jest": "^27.0.1",
+    "@types/react": "^17.0.19",
+    "@types/react-dom": "^17.0.9",
     "@types/systemjs": "^6.1.1",
     "@types/webpack-env": "^1.16.2",
+    "dotenv-webpack": "^8.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "single-spa": "^5.9.3",
-    "@types/react": "^17.0.19",
-    "@types/react-dom": "^17.0.9"
+    "single-spa-react": "^4.3.1"
   },
   "types": "dist/henrique1204-cms.d.ts"
 }
