--- a/root/tsconfig.json
+++ b/root/tsconfig.json
@@ -1,9 +1,15 @@
 {
   "extends": "ts-config-single-spa",
-  "files": ["src/henrique1204-root-config.ts"],
+  "files": [
+    "src/henrique1204-root-config.ts"
+  ],
   "compilerOptions": {
     "declarationDir": "dist"
   },
-  "include": ["src/**/*"],
-  "exclude": ["src/**/*.test*"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "src/**/*.test*"
+  ]
 }
