--- a/root/babel.config.json
+++ b/root/babel.config.json
@@ -15,9 +15,12 @@
   "env": {
     "test": {
       "presets": [
-        ["@babel/preset-env", {
-          "targets": "current node"
-        }]
+        [
+          "@babel/preset-env",
+          {
+            "targets": "current node"
+          }
+        ]
       ]
     }
   }
